# rusty-templates-frontend

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  tailwind.config.js
.github/workflows/: main.yml
src/: app.rs  main.rs
src/components/: accordion.rs  badge.rs  bread_crumbs.rs  button.rs  card.rs  cookie_consent.rs  loading_spinner.rs  mod.rs  no_content.rs  notifications.rs  rating.rs  side_menu_item.rs  stats_card.rs  tag.rs  user_profile_nav.rs
src/components/components/: badge.rs  bread_crumbs.rs  mod.rs  popover.rs  side_menu_item.rs  user_profile_nav.rs
src/components/components/forms/: checkbox.rs  datepicker.rs  input.rs  textarea.rs  toggle_switch.rs
src/components/components/hocs/: blank_vcomp.rs  mod.rs  protected_route.rs
src/components/components/table/: data_table.rs  pagination.rs
src/components/components/wizards/: chat.rs  map.rs  mod.rs  stepper.rs
src/components/forms/: checkbox.rs  datepicker.rs  input.rs  mod.rs  radio_input.rs  select.rs  textarea.rs  toggle_switch.rs
src/components/hocs/: protected_route.rs
src/components/modal/: basic_modal.rs  mod.rs  precursor_modal.rs
src/components/nav/: mod.rs  top_nav.rs
src/components/table/: data_table.rs  mod.rs
src/components/tabs/: tabs.rs
src/components/wizards/: stepper.rs
src/data/: mod.rs
src/data/context/: mod.rs  orders.rs  products.rs  users.rs
src/data/graphql/: api_call.rs  mod.rs
src/data/models/: general.rs  mod.rs  order.rs  template.rs  user.rs
src/utils/: auth_interceptor.rs
src/views/: about.rs  account.rs  cart.rs  details.rs  faqs.rs  landing.rs  mod.rs  privacy.rs  sign_in.rs  sign_up.rs  store.rs  thankyou.rs  tos.rs
styles/: input.css  output.css
